@@ -1,4 +1,3 @@
 #name: Invalid IT instructions
 #as:
-#skip: *-*-*coff *-*-pe *-*-wince *-*-*aout* *-*-netbsd *-*-riscix*
 #error-output: thumb2_it_bad.l
